Revert logging changes