@@ -25,10 +25,9 @@ import sleeper.configuration.properties.instance.InstanceProperties;
 import sleeper.configuration.properties.table.TableProperties;
 import sleeper.core.partition.Partition;
 import sleeper.core.statestore.FileReference;
-import sleeper.core.util.LoggedDuration;
 
-import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -54,38 +53,29 @@ public class DelegatingCompactionStrategy implements CompactionStrategy {
 
     public List<CompactionJob> createCompactionJobs(InstanceProperties instanceProperties, TableProperties tableProperties, CompactionJobFactory factory, List<FileReference> fileReferences,
             List<Partition> partitions) {
-        Instant startTime = Instant.now();
         leafStrategy.init(instanceProperties, tableProperties, factory);
         shouldCreateJobsStrategy.init(instanceProperties, tableProperties);
         CompactionStrategyIndex index = new CompactionStrategyIndex(tableProperties.getStatus(), fileReferences, partitions);
-        if (index.getFilesInLeafPartitions().isEmpty()) {
-            LOGGER.info("No unassigned files found in leaf partitions, skipping compaction job creation, took {}",
-                    LoggedDuration.withShortOutput(startTime, Instant.now()));
-            return List.of();
-        }
+
         List<CompactionJob> compactionJobs = new ArrayList<>();
         for (FilesInPartition filesInPartition : index.getFilesInLeafPartitions()) {
             compactionJobs.addAll(createJobsForLeafPartition(filesInPartition));
         }
-        LOGGER.info("Created {} compaction jobs across {} leaf partitions, took {}",
-                compactionJobs.size(), index.getFilesInLeafPartitions().size(),
-                LoggedDuration.withShortOutput(startTime, Instant.now()));
         return compactionJobs;
     }
 
     private List<CompactionJob> createJobsForLeafPartition(FilesInPartition filesInPartition) {
         long maxNumberOfJobsToCreate = shouldCreateJobsStrategy.maxCompactionJobsToCreate(filesInPartition);
         if (maxNumberOfJobsToCreate < 1) {
-            return List.of();
+            return Collections.emptyList();
         }
         LOGGER.info("Max jobs to create = {}", maxNumberOfJobsToCreate);
         List<CompactionJob> jobs = leafStrategy.createJobsForLeafPartition(filesInPartition);
-        if (jobs.isEmpty()) {
-            return List.of();
-        }
         LOGGER.info("Defined {} compaction job{} for partition {}, table {}",
                 jobs.size(), 1 == jobs.size() ? "" : "s", filesInPartition.getPartitionId(), filesInPartition.getTableStatus());
-        jobs = jobs.subList(0, (int) Math.min(jobs.size(), maxNumberOfJobsToCreate));
+        while (jobs.size() > maxNumberOfJobsToCreate) {
+            jobs.remove(jobs.size() - 1);
+        }
         LOGGER.info("Created {} compaction job{} for partition {}, table {}",
                 jobs.size(), 1 == jobs.size() ? "" : "s", filesInPartition.getPartitionId(), filesInPartition.getTableStatus());
         return jobs;
